--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'kotlin-android'
 }
 
+repositories {
+    jcenter()
+}
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -33,13 +37,14 @@ android {
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+
 }
